--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -4,3 +4,15 @@
 
 # Set your personal hyprland configuration here
 # For a sample file, please refer to https://github.com/prasanthrangan/hyprdots/blob/main/Configs/.config/hypr/userprefs.t2
+# Workspace rules
+workspace = 1,  m[HDMI-A-1]
+workspace = 3,  m[HDMI-A-1]
+workspace = 5,  m[HDMI-A-1]
+workspace = 7,  m[HDMI-A-1]
+workspace = 9,  m[HDMI-A-1]
+
+workspace = 2, m[HDMI-A-2]
+workspace = 4, m[HDMI-A-2]
+workspace = 6, m[HDMI-A-2]
+workspace = 8, m[HDMI-A-2]
+workspace = 10, m[HDMI-A-2]
