--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -112,7 +112,7 @@
     },
 
     "clock": {
-        "format": "{:%I:%M %p}",
+        "format": "{:%R 󰃭 %d·%m·%y}",
         "rotate": 0,
         "format-alt": "{:%R 󰃭 %d·%m·%y}",
         "tooltip-format": "<span>{calendar}</span>",
